--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,5 +8,5 @@ jobs:
         steps:
           - uses: actions/checkout@v1
           - name: Script
-            run: ./scripts/script.ps1
+            run: ./.github/scripts/script.ps1
             shell: pwsh
