--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,5 +9,5 @@ jobs:
         steps:
           - uses: actions/checkout@v1
           - name: Script
-            run: .\.github\scripts\script.ps1
+            run: ./.github/scripts/script.ps1
             shell: pwsh
